# filmweb-export

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  resp.txt  setup.py  test4y7567373346346_filmweb_20201002.csv
filmweb/: getter.py  main.py  parser.py  utils.py
filmweb-export/: utils.py
